Remove some build warnings essentially deprecated warnings